--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ gensim==3.7.3
 beautifulsoup4==4.6.0
 youtube-dl==2019.4.24
 langdetect==1.0.7
-flask=1.1.1
+flask==1.1.1
 
 # Use this to enter image and move file structure
 # $ docker run -it dockermonty sh
