--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ beautifulsoup4==4.6.0
 youtube-dl==2019.4.24
 langdetect==1.0.7
 flask==1.1.1
+gunicorn==20.0.4
 
 # Use this to enter image and move file structure
 # $ docker run -it dockermonty sh
