--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,9 @@ urllib3==1.24
 #numpy<1.14.4
 #python-dateutil
 #pytz>=2011k
-#pandas==0.23.0
+pandas==0.23.0
 sumy==0.7.0
-#spacy==2.0.18
+spacy==2.0.18
 gensim==3.7.3
 beautifulsoup4==4.6.0
 youtube-dl==2019.4.24
