--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ youtube-dl==2019.4.24
 langdetect==1.0.7
 flask==1.1.1
 gunicorn==20.0.4
+wptools==0.4.17
 
 # Use this to enter image and move file structure
 # $ docker run -it dockermonty sh
