--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,4 @@ flask==1.1.1
 gunicorn==20.0.4
 wptools==0.4.17
 arxiv==0.5.1
-# Use this to enter image and move file structure
-# $ docker run -it dockermonty sh
-
-# Use this to run interactively
-# docker run -it dockermonty
+PyPDF2==1.26.0
