--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,5 @@ gunicorn==20.0.4
 wptools==0.4.17
 arxiv==0.5.1
 PyPDF2==1.26.0
-textract==1.6.3
 pytesseract==0.3.2
-pdftotext==2.1.4
+pdf2image==1.11.0
